SET(LINUXOPENGL_SRCS LinuxOpenGL.cpp)
ADD_EXECUTABLE(LinuxOpenGL ${LINUXOPENGL_SRCS})

SET_TARGET_PROPERTIES(LinuxOpenGL PROPERTIES COMPILE_FLAGS "${COMPILE_FLAGS} -Wall -g")

ADD_DEPENDENCIES(LinuxOpenGL OpenGLRenderer aeongui)
TARGET_LINK_LIBRARIES(LinuxOpenGL OpenGLRenderer aeongui ${OPENGL_LIBRARIES} X11 Xxf86vm rt)

