SET(SDLGL_SOURCES
	sdlgl.cpp 
	../common/logo.c 
	../common/Vera.c 
	../common/glcommon.c
)

SET(SDLGL_HEADERS
	../common/logo.h 
	../common/Vera.h
	../common/glcommon.h
)

ADD_EXECUTABLE(sdlgl ${SDLGL_SOURCES} ${SDLGL_HEADERS})

TARGET_LINK_LIBRARIES(sdlgl 
	OpenGL15Renderer
	aeongui
	${SDLMAIN_LIBRARY} 
	${SDL_LIBRARY}
	${OPENGL_gl_LIBRARY}
	${OPENGL_glu_LIBRARY}
)

IF(MSVC)

SET_TARGET_PROPERTIES(sdlgl 
	PROPERTIES LINK_FLAGS_DEBUG 
	"/NODEFAULTLIB:msvcrt.lib /SUBSYSTEM:CONSOLE"
)

SET_TARGET_PROPERTIES(sdlgl 
	PROPERTIES LINK_FLAGS_RELEASE
	"/NODEFAULTLIB:msvcrt.lib /SUBSYSTEM:CONSOLE"
)

SET_TARGET_PROPERTIES(sdlgl 
	PROPERTIES LINK_FLAGS 
	"/NODEFAULTLIB:msvcrt.lib /SUBSYSTEM:CONSOLE"
)

ENDIF(MSVC)
