SET(OPENGL15_RENDERER_SOURCES
OpenGLRenderer.cpp
${CMAKE_SOURCE_DIR}/external/GLee/GLee.c
)
SET(OPENGL15_RENDERER_HEADERS
${CMAKE_SOURCE_DIR}/external/GLee/GLee.h
../../include/Renderer.h
../../include/OpenGLRenderer.h
../../common/fontstructs.h
)
ADD_LIBRARY(OpenGL15Renderer ${OPENGL15_RENDERER_HEADERS} ${OPENGL15_RENDERER_SOURCES})
IF(MSVC)
SET_TARGET_PROPERTIES(OpenGL15Renderer PROPERTIES COMPILE_FLAGS "${COMPILE_FLAGS} /D_CRT_SECURE_NO_WARNINGS")
ENDIF(MSVC)
IF(MSYS)
SET_TARGET_PROPERTIES(OpenGL15Renderer PROPERTIES COMPILE_FLAGS "${COMPILE_FLAGS} -DWIN32")
TARGET_LINK_LIBRARIES(OpenGL15Renderer opengl32 glu32)
ENDIF(MSYS)
