SET(OPENGL31_RENDERER_SOURCES
OpenGLRenderer.cpp
${CMAKE_SOURCE_DIR}/external/GLee/GLee.c
)
SET(OPENGL31_RENDERER_HEADERS
${CMAKE_SOURCE_DIR}/external/GLee/GLee.h
../../include/Renderer.h
../../include/OpenGLRenderer.h
../../common/fontstructs.h
)
ADD_LIBRARY(OpenGL31Renderer ${OPENGL31_RENDERER_HEADERS} ${OPENGL31_RENDERER_SOURCES})
IF(MSVC)
SET_TARGET_PROPERTIES(OpenGL31Renderer PROPERTIES COMPILE_FLAGS "${COMPILE_FLAGS} /D_CRT_SECURE_NO_WARNINGS")
ENDIF(MSVC)
IF(MSYS)
SET_TARGET_PROPERTIES(OpenGL31Renderer PROPERTIES COMPILE_FLAGS "${COMPILE_FLAGS} -DWIN32")
TARGET_LINK_LIBRARIES(OpenGL31Renderer opengl32 glu32)
ENDIF(MSYS)
