SET(FONT2C_HEADERS ../../common/fontstructs.h ../../include/Integer.h)
SET(FONT2C_SOURCES font2c.cpp)
IF(NOT IL_FOUND)
SET(FONT2C_SOURCES ${FONT2C_SOURCES} pcx.h pcx.cpp)
ENDIF(NOT IL_FOUND)
ADD_EXECUTABLE(font2c ${FONT2C_HEADERS} ${FONT2C_SOURCES} )
if(NOT FREETYPE_FOUND)
add_dependencies(font2c ${FREETYPE_LIBRARIES})
endif(NOT FREETYPE_FOUND)
TARGET_LINK_LIBRARIES(font2c "${FREETYPE_LIBRARIES}")
IF(IL_FOUND)
IF(NOT DEFINED IL_LIBRARIES)
SET(IL_LIBRARIES ${IL_LIBRARY})
ENDIF(NOT DEFINED IL_LIBRARIES)
TARGET_LINK_LIBRARIES(font2c ${IL_LIBRARIES})
ELSE(IL_FOUND)
SET_TARGET_PROPERTIES(font2c PROPERTIES COMPILE_DEFINITIONS "USE_PCX")
ENDIF(IL_FOUND)
